@@ -10,6 +10,9 @@ GOAL:
         When you click on a home page news item you will be taken to a page with information from the database rather than the local json file like before
         All of the above works when upload to the porfolio
         Home page now loads from database instead of local file
+        You can now submit info to the database via a form and have it display on page.
+        The page id is now set dependent on how many objects there are in the database. When you submit the form it assigns an id equal to total number of objects in the database + 1.
+
 
 
 3 August 2018
